src/objects/COPE_NewIncData__c.object
<CustomObject>
    <fields>
        <fullName>COPECountPerSeat__c</fullName>
        <label>COPE #</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPETotalPerSeat__c</fullName>
        <label>COPE $</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPE_Increased_Count__c</fullName>
        <label>COPE Increased Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPE_Increased_Total__c</fullName>
        <label>COPE Increased Total</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cell1Class__c</fullName>
        <label>Cell1Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewCOPECount__c</fullName>
        <label>NewCOPECount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewCOPETotal__c</fullName>
        <label>NewCOPETotal</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputColumn1__c</fullName>
        <label>OutputColumn1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeatID__c</fullName>
        <label>SeatID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Row_Id__c</fullName>
        <label>TableRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>COPE New or Inc Data</label>
    <nameField>
        <label>COPE New or Inc Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COPE New or Inc Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>